# artbounty

./: .gitattributes  .gitignore  Cargo.toml  artbounty.toml  debug.sh  debug_csr.sh  docker-compose.yml  flake.nix  fr.sh  index.html  leptos.toml  package-lock.json  package.json  playwright.config.ts  rust-toolchain.toml  watch.sh
.cargo/: config.toml
artbounty/: Cargo.toml
artbounty-api/: Cargo.toml
artbounty-api/src/: lib.rs
artbounty-backend/: Cargo.toml
artbounty-backend/src/: main.rs
artbounty-db/: Cargo.toml
artbounty-db/src/: lib.rs
artbounty-frontend/: Cargo.toml  webdriver.json
artbounty-frontend/src/: app.rs  lib.rs  logger.rs  toolbox.rs
artbounty-frontend/src/app/: components.rs  page.rs
artbounty-seed/: Cargo.toml
artbounty-seed/src/: main.rs
artbounty-shared/: Cargo.toml
artbounty-shared/src/: lib.rs
artbounty-web-backend/: Cargo.toml
artbounty-web-backend/src/: main.rs
artbounty-web-frontend/: Cargo.toml
artbounty-web-frontend/src/: app.rs  lib.rs  logger.rs  toolbox.rs
artbounty-web-frontend/src/app/: components.rs  page.rs
artbounty/src/: api.rs  controller.rs  db.rs  lib.rs  main.rs  server.rs  view.rs  web.rs
artbounty/src/api/: backend.rs  post_comment.rs  shared.rs
artbounty/src/api/backend/: auth.rs  change_email.rs  change_password.rs  change_username.rs  post.rs  post_comment.rs  post_like.rs
artbounty/src/api/shared/: post_comment.rs
artbounty/src/controller/: auth.rs  post.rs
artbounty/src/db/: post_comment.rs
artbounty/src/view/: app.rs  lib.rs  logger.rs  toolbox.rs
artbounty/src/view/app/: components.rs  hook.rs  page.rs
artbounty/src/view/app/hook/: api_gallery.rs  api_post.rs  api_post_comments.rs  api_post_file_upload.rs  api_post_like.rs  use_email_change.rs  use_event_listener.rs  use_future.rs  use_infinite_scroll.rs  use_infinite_scroll_basic.rs  use_infinite_scroll_fn.rs  use_infinite_scroll_virtual.rs  use_intersection.rs  use_intersection_switch.rs  use_mutation.rs  use_password_change.rs  use_post_comment.rs  use_post_comments_baisc.rs  use_post_comments_manual.rs  use_post_like.rs  use_register.rs  use_scroll_correction.rs  use_spawner.rs  use_text_length_counter.rs  use_username_change.rs
artbounty/src/view/app/page/: post.rs
assets/atkinson_hyperlegible_next/: license.txt
e2e/: example.spec.ts  gallery.spec.ts  package.json  post.test.ts  upload.test.ts  utils.ts
e2e/tests/: example.spec.ts
legacy/artcord-leptos/: Cargo.toml
shipyard/: Cargo.toml
shipyard/src/: lib.rs
style/: tailwind.css
tmp_wasm/: Cargo.toml
tmp_wasm/src/: lib.rs
