[workspace]
resolver = "2"
members = [
    "artbounty-api",
    "artbounty-db",
    "artbounty-backend",
    "artbounty-frontend",
    "artbounty-shared",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
incremental = true
codegen-units = 256
lto = "off"
debug = "none"
strip = "none"

[profile.dev.package."*"]
opt-level = 0

[workspace.dependencies]
pin-project-lite = "0.2.16"
strum = { version = "0.27.1", features = ["strum_macros", "derive"] }
artbounty-frontend = { path = "artbounty-frontend" }
artbounty-api = { path = "artbounty-api" }
artbounty-db = { path = "artbounty-db" }
artbounty-shared = { path = "artbounty-shared" }
chrono = "0.4.41"
config = "0.15.13"
bytes = "1"
biscotti = "0.4.0"
email_address = "0.2.9"
tower_governor = "0.7.0"
cfg-if = "1"
password-hash = "0.5.0"
argon2 = "0.5.3"
itertools = "0.14.0"
colored = "3.0.0"
regex = "1.11.1"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["zstd", "multipart"] }
syn = { version = "2.0.104", features = ["full", "extra-traits"] }
jiff = { version = "0.2.15", features = ["serde", "js"] }
# rand = "0.9.1"
# getrandom = { version = "0.3.3", features = ["wasm_js"] }
serde = "1.0.219"
axum = { version = "0.8.4", features = ["http2"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-test = { version = "17.3.0", features = ["reqwest"] }
leptos_axum = { version = "0.8.2" }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
http = "1.3.1"
tower-http = { version = "0.6.4", features = [
    "compression-full",
    "timeout",
    "cors",
] }
surrealdb = { version = "2.3.3", features = ["kv-surrealkv", "kv-mem"] }
console_error_panic_hook = "0.1.7"
gloo = { version = "0.11.0", features = ["file", "futures"] }
indexmap = "2.9.0"
indextree = "4.7.4"
leptos = { version = "0.8.2", features = [] }
# leptos = { version = "0.8.2", features = ["rkyv"] }
leptos_router = { version = "0.8.2" }
leptos_meta = "0.8.2"
ordered-float = { version = "5.0.0", features = [] }
# ordered-float = { version = "5.0.0", features = ["rkyv"] }
reactive_stores = "0.2.2"
rkyv = "0.8.10"
server_fn = { version = "0.8.2", features = [] }
# server_fn = { version = "0.8.2", features = ["rkyv"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "js"] }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50" }
wasm-bindgen-test = "0.3.50"
send_wrapper = { version = "0.6.0" }
sha2 = { version = "0.10.9" }
bytecheck = "0.8.1"
futures = { version = "0.3.31" }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.98" }
pretty_assertions = { version = "1.4.1" }
simple_logger = "5.0.0"
log = "0.4.27"
test-log = { version = "0.2.17", features = ["trace"] }
web-sys = { version = "0.3.77", features = [
    "Window",
    "HtmlDivElement",
    "EventTarget",
    "DataTransfer",
    "DragEvent",
    "Blob",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Element",
    "ResizeObserverSize",
    "DomRectReadOnly",
    "MutationObserver",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "MutationObserverInit",
    "Node",
] }

[[workspace.metadata.leptos]]
name = "artbounty"
bin-package = "artbounty-backend"
lib-package = "artbounty-frontend"
output-name = "artbounty_1"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-addr = "0.0.0.0:3000"
reload-port = 3001
end2end-cmd = "yarn playwright test"
end2end-dir = "e2e"
browserquery = "defaults"
watch = true
env = "DEV"
lib-profile-release = "wasm-release"
bin-features = []
lib-features = ["hydrate"]
bin-default-features = false
lib-default-features = false
