[workspace]
resolver = "2"
members = [
    # "artbounty-api",
    # "artbounty-db",
    # "artbounty-backend",
    # "artbounty-frontend",
    # "artbounty-shared",
    "artbounty", "artbounty-seed",
]

[workspace.dependencies]
strum = { version = "0.27.1", features = ["strum_macros", "derive"] }
artbounty = { path = "artbounty" }
little_exif = "0.6.14"
image = "0.25.6"
webp = "0.3.0"
config = "0.15.14"
cfg-if = "1"
gxhash = {version = "3.5.0", features = ["deterministic"]}
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.22", features = ["zstd", "multipart"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["serde_derive"] }
axum = { version = "0.8.4", features = ["http2"] }
axum-test = { version = "17.3.0", features = ["reqwest"] }
leptos_axum = { version = "0.8.2" }
tokio = { version = "1.46.1", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
http = "1.3.1"
tower-http = { version = "0.6.4", features = [
    "compression-full",
    "timeout",
    "cors",
] }
surrealdb = { version = "2.3.3", features = ["kv-surrealkv", "kv-mem"] }
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.2", features = [] }
leptos_router = { version = "0.8.2" }
leptos_meta = "0.8.2"
rkyv = { version = "0.8.10", features = [ "unaligned" ] }
server_fn = { version = "0.8.2", features = [] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50" }
wasm-bindgen-test = "0.3.50"
send_wrapper = { version = "0.6.0" }
futures = { version = "0.3.31" }
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.98" }
log = "0.4.27"
web-sys = { version = "0.3.77", features = [
    "Window",
    "HtmlDivElement",
    "EventTarget",
    "DataTransfer",
    "DragEvent",
    "Blob",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "ReadableStreamReadResult",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Element",
    "ResizeObserverSize",
    "DomRectReadOnly",
    "DomRect",
    "MutationObserver",
    "MutationRecord",
    "MutationObservingInfo",
    "MutationEvent",
    "MutationObserverInit",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
    "MutationObserverInit",
    "Node",
    "File",
    "FileList",
    "Crypto",
] }

[[workspace.metadata.leptos]]
name = "artbounty"
bin-package = "artbounty-backend"
lib-package = "artbounty-frontend"
output-name = "artbounty_1"
site-root = "target/site"
site-pkg-dir = "pkg"
tailwind-input-file = "style/tailwind.css"
assets-dir = "assets"
site-addr = "127.0.0.1:3000"
# site-addr = "0.0.0.0:3000"
reload-port = 3001
end2end-cmd = "yarn playwright test"
end2end-dir = "e2e"
browserquery = "defaults"
watch = true
env = "DEV"
lib-profile-release = "wasm-release"
bin-features = []
lib-features = ["hydrate"]
bin-default-features = false
lib-default-features = false
