[package]
name = "artbounty-api"
version = "0.1.0"
edition = "2024"

[dependencies]
artbounty-shared = { workspace = true }
artbounty-db = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
leptos = { workspace = true }
server_fn = { workspace = true }
tracing = { workspace = true }
bytecheck = { workspace = true }
rkyv = { workspace = true }
cfg-if = { workspace = true }
bytes = { workspace = true }
pin-project-lite = { workspace = true }
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tower_governor = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
biscotti = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
jiff = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
# artbounty-db = { workspace = true, features = ["test"] }
test-log = { workspace = true }
axum-test = { workspace = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "dep:axum",
    "dep:axum-extra",
    "dep:tower",
    "dep:leptos_axum",
    "dep:artbounty-db",
    "dep:tower_governor",
    "dep:tower-http",
    "dep:tokio",
    "dep:biscotti",
    "dep:argon2",
    "dep:jsonwebtoken",
]
csr = ["leptos/csr"]
