[package]
name = "artbounty-backend"
version = "0.1.0"
edition = "2024"

# [profile.dev]
# opt-level = 0
# incremental = true
# codegen-units = 256

# [profile.dev.package."*"]
# opt-level = 0

[dependencies]
artbounty-frontend = { workspace = true, features = ["ssr"] }
artbounty-api = { workspace = true, features = ["ssr"] }
artbounty-db = { workspace = true }
axum = { workspace = true }
leptos = { workspace = true }
leptos_axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
pretty_assertions = { workspace = true }
rkyv = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
