[package]
name = "artbounty-db"
version = "0.1.0"
edition = "2024"

[dependencies]
artbounty-shared = { workspace = true }
argon2 = { workspace = true }
serde = { workspace = true }
password-hash = { workspace = true }
surrealdb = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true }
cfg-if = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
