[package]
name = "artbounty-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
email_address = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
rkyv = { workspace = true }
# regex = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
