
[package]
name = "shipyard"
version = "0.1.0"
edition = "2024"

# [lib]
# crate-type = ["dylib"]

# [features]
# hydrate = ["leptos/hydrate"]
# ssr = [
#     "leptos/ssr",
#     "leptos_router/ssr",
#     "dep:axum",
#     # "dep:axum-extra",
#     "dep:tower",
#     "dep:leptos_axum",
#     # "dep:tower_governor",
#     "dep:tower-http",
#     "dep:tokio",
#     # "dep:biscotti",
#     "dep:argon2",
#     # "dep:jsonwebtoken",
#     # "dep:resend-rs",
#     "dep:image",
#     # "dep:imageproc",
#     # "dep:ab_glyph",
#     "dep:webp",
#     "dep:little_exif",
#     "dep:gxhash",
#     "dep:surrealdb",
#     "dep:config",
#     "dep:rand",
# ]
# csr = ["leptos/csr"]
#
# [dependencies]
# strum = { version = "0.27.1", features = ["strum_macros", "derive"] }
# little_exif = {version = "0.6.14", optional = true}
# image = {version = "0.25.6", optional = true }
# webp = {version = "0.3.0", optional = true}
# config = {version = "0.15.14", optional = true}
# cfg-if = "1"
# gxhash = { version = "3.5.0", features = ["deterministic"], optional = true }
# argon2 = {version = "0.5.3", optional = true}
# # jsonwebtoken = "9.3.1"
# reqwest = { path = "/home/hey/github/reqwest", features = ["zstd", "multipart"] }
# rand = {version = "0.9.1", optional = true}
# serde = { version = "1.0.219", features = ["serde_derive"] }
# axum = { path = "/home/hey/github/axum/axum", features = ["http2", "multipart"], optional = true} # dyn
# # axum = { version = "0.8.4", features = ["http2"] }
# axum-test = { path = "/home/hey/github/axum-test", features = ["reqwest"] }
# tokio = { version = "1.46.1", features = ["full"], optional = true }
# tower = { version = "0.5.2", features = ["timeout"], optional = true }
# http = "1.3.1"
# tower-http = { version = "0.6.4", features = [
#     "compression-full",
#     "timeout",
#     "cors",
# ], optional = true }
# surrealdb = { path = "/home/hey/github/surrealdb/surrealdb", features = ["kv-surrealkv", "kv-mem"], optional = true }
# # surrealdb = { version = "2.3.3", features = ["kv-surrealkv", "kv-mem"] }
# console_error_panic_hook = "0.1.7" # dyn
#
# leptos = { path = "/home/hey/github/leptos/leptos" } # dyn
# leptos_router = { path = "/home/hey/github/leptos/router" } # dyn
# leptos_meta = { path = "/home/hey/github/leptos/meta" } # dyn
# leptos_axum = { path = "/home/hey/github/leptos/integrations/axum", optional = true }
#
# # leptos = { git = "https://github.com/hey-adora/leptos" } # dyn
# # leptos_router = { git = "https://github.com/hey-adora/leptos" } # dyn
# # leptos_meta = { git = "https://github.com/hey-adora/leptos" } # dyn
# # leptos_axum = { git = "https://github.com/hey-adora/leptos" } # dyn
#
# # leptos_axum = { path = "/home/hey/github/leptos/integrations/axum" } # dyn
# # leptos_axum = { version = "0.8.2" }
# # leptos = { version = "0.8.2", features = [] }
# # leptos_router = { version = "0.8.2" }
# # leptos_meta = "0.8.2"
# rkyv = { version = "0.8.10", features = ["unaligned"] }
# server_fn = { version = "0.8.2", features = [] }
# tracing = "0.1.41"
# tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# wasm-bindgen = { version = "0.2.100" }
# wasm-bindgen-futures = { version = "0.4.50" }
# wasm-bindgen-test = "0.3.50"
# send_wrapper = { version = "0.6.0" }
# futures = { version = "0.3.31" }
# thiserror = { version = "2.0.12" }
# anyhow = { version = "1.0.98" }
# log = "0.4.27"
# web-sys = { version = "0.3.91", features = [
#     "Window",
#     "HtmlDivElement",
#     "EventTarget",
#     "DataTransfer",
#     "DragEvent",
#     "Blob",
#     "ReadableStream",
#     "ReadableStreamDefaultReader",
#     "ReadableStreamReadResult",
#     "ResizeObserver",
#     "ResizeObserverEntry",
#     "Element",
#     "ResizeObserverSize",
#     "DomRectReadOnly",
#     "DomRect",
#     "MutationObserver",
#     "MutationRecord",
#     "MutationObservingInfo",
#     "MutationEvent",
#     "MutationObserverInit",
#     "IntersectionObserver",
#     "IntersectionObserverInit",
#     "IntersectionObserverEntry",
#     "MutationObserverInit",
#     "Node",
#     "File",
#     "FileList",
#     "Crypto",
# ] }
