[package]
name = "tmp_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
artbounty = { workspace = true, features = [] }
# artbounty = { workspace = true, features = ["ssr"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
hydration_context = { workspace = true }
any_spawner = { workspace = true }
